fixed some layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@ html, body, #root {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  font-size: 0.85vw;
   height: 100%;
   overflow: hidden;
 }
