--- a/src/pages/compare_election_results/CompareElectionResults.module.css
+++ b/src/pages/compare_election_results/CompareElectionResults.module.css
@@ -15,6 +15,8 @@
   box-sizing: border-box;
   padding: 0 15px;
   /* background-color: #ff00ff; */
+  display: flex;
+  flex-direction: column;
   overflow: scroll;
 }
 
@@ -34,7 +36,7 @@
 .elections_box {
   width: 100%;
   height: calc(60% - 30px);
-  margin: 15px 0;
+  /* margin: 15px 0; */
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -46,6 +48,7 @@
 .graphs_box {
   box-sizing: border-box;
   /* min-height: calc(20% - 10px); */
+  flex: 1;
   width: 100%;
   margin: 20px 0;
   display: flex;
@@ -70,5 +73,8 @@
   font-size: 0.92vw;
   font-style: italic;
   font-family: Verdana, sans-serif;
-  margin-top: 20px;
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
