--- a/src/pages/main/Main.module.css
+++ b/src/pages/main/Main.module.css
@@ -8,7 +8,6 @@
   background-color: var(--background-color-secondary);
   /* padding: 10px; */
   align-items: center;
-  font-size: 0.85vw;
 }
 
 .horizontal_layout {
@@ -45,6 +44,7 @@
 
 .rule_picker_container {
   width: 100%;
+  min-height: 65px;
   position: sticky;
   padding: 15px;
   box-sizing: border-box;
@@ -52,7 +52,7 @@
 }
 
 .rule_picker {
-  min-height: 40px;
+  
   display: flex;
   flex-direction: row;
   justify-content: space-around;
